--- a/style.css
+++ b/style.css
@@ -61,12 +61,12 @@ transform:translateX(-400px) translateY(-50%)
  .page1 .dropdown button  {
  background-color: darkgrey;
  position: absolute;
- right: 3%;
+ right: 6%;
  top:3%;
- margin:0;
+ margin:20px;
 color: #fff;
-padding: 0;
-border: none;
+padding: 6;
+border:30%;
 
 transform:translateX(90px) translateY(0px)
   } 
@@ -85,7 +85,7 @@ text-decoration: none;
  .page1 .dropdown .content{
  position: absolute;
  background-color: #fff;
-min-width: 200px;
+min-width: 150px;
 margin: 25px;
 box-shadow: 2px 2px 2px 2px 2px black;
 display: none;
